<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium"
    tools:context=".ui.fragments.step1.Step2Fragment">

    <TextView
        android:id="@+id/cities_desc_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Small"
        android:text="@string/cities_desc_txt"
        android:textColor="@color/colorPrimary"
        android:layout_marginEnd="@dimen/padding_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cities_txt"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bg_shape"
        android:padding="@dimen/padding_medium"
        android:inputType="text"
        android:layout_marginTop="@dimen/padding_medium"
        android:hint="@string/cities_hint_txt"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cities_desc_txt"
        tools:ignore="Autofill" />


    <Button
        android:id="@+id/submit_btn"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg_shape"
        android:text="@string/submit_btn"
        android:imeOptions="actionDone"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/padding_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cities_txt"
        tools:ignore="TextViewEdits" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cities_weather_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/padding_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_btn" />

    <TextView
        android:id="@+id/no_data_available_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data_available_txt"
        android:textColor="@color/colorAccent"
        style="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/cities_weather_recycler"
        app:layout_constraintEnd_toEndOf="@+id/cities_weather_recycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cities_weather_recycler" />

</androidx.constraintlayout.widget.ConstraintLayout>
