<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_small">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:background="@drawable/forecast_header_bg_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/city_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Large"
            tools:text="Dubai"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_marginEnd="@dimen/padding_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weather_desc_txt"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginEnd="@dimen/padding_medium"
            android:lines="1"
            android:maxLines="2"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_name_txt"
            tools:text="light intensity drizzle" />

        <TextView
            android:id="@+id/date_time_txt"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginEnd="@dimen/padding_medium"
            android:lines="1"
            android:maxLines="2"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_name_txt"
            tools:text="2017-01-30 18:00:00" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/forecast_details_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/forecast_main_bg_shape"
        android:padding="@dimen/padding_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout">

        <TextView
            android:id="@+id/temperature_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="10 °C"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_xlarge"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/min_temperature_label_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/details_title_txt"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_medium"
            android:text="@string/details_title_txt"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mid_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/details_divider_view"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginEnd="@dimen/padding_medium"
            android:background="@color/colorForecastHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mid_guideline"
            app:layout_constraintTop_toBottomOf="@+id/details_title_txt" />

        <TextView
            android:id="@+id/min_temperature_label_txt"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginEnd="@dimen/padding_medium"
            android:text="@string/min_temperature_label_txt"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toStartOf="@id/last_quarter_guideline"
            app:layout_constraintStart_toStartOf="@id/mid_guideline"
            app:layout_constraintTop_toBottomOf="@+id/details_divider_view" />

        <TextView
            android:id="@+id/min_temperature_txt"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/last_quarter_guideline"
            app:layout_constraintTop_toBottomOf="@+id/details_divider_view"
            tools:text="35 °C" />

        <TextView
            android:id="@+id/max_temperature_label_txt"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginEnd="@dimen/padding_medium"
            android:text="@string/max_temperature_label_txt"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toStartOf="@id/last_quarter_guideline"
            app:layout_constraintStart_toStartOf="@id/mid_guideline"
            app:layout_constraintTop_toBottomOf="@+id/min_temperature_txt" />

        <TextView
            android:id="@+id/max_temperature_txt"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/last_quarter_guideline"
            app:layout_constraintTop_toBottomOf="@+id/min_temperature_txt"
            tools:text="35 °C" />

        <TextView
            android:id="@+id/wind_speed_label_txt"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginEnd="@dimen/padding_medium"
            android:text="@string/wind_speed_label_txt"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toStartOf="@id/last_quarter_guideline"
            app:layout_constraintStart_toStartOf="@id/mid_guideline"
            app:layout_constraintTop_toBottomOf="@+id/max_temperature_txt" />

        <TextView
            android:id="@+id/wind_speed_txt"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/last_quarter_guideline"
            app:layout_constraintTop_toBottomOf="@+id/max_temperature_txt"
            tools:text="35 m/s" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/mid_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/last_quarter_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".75" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
